  variant.
- Pets can now potentially become stunned or invisible by eating the right
  kind of corpse.
- Birds are now a potential kind of pet. You begin with a little bird, which can
  grow up into a falcon and then into a giant falcon. They are balanced around
  the existing pet options.
- Death is generated with a scythe.
- Monsters with heads now "swallow" you instead of "engulfing" you.

Quest Nemesis Changes
- Lord Surtur can create level-shaking earthquakes when he attacks.
- Nalzok now has a much higher chance of summoning other demons on hit than
  demons found in gehennom.
- Ixoth's claw attack can stun the opponent.
- The Dark One now casts spells twice per turn.
- Thoth Amon now casts a mix of clerical and mage spells. The changes to monster
  sacrifice at altars could also cause some interesting effects.
- Ixoth and the Chromatic Dragon are both affected by dragon changes, and as
  such are potentially nastier.

New Races
- Merfolk: Start with swimming, and eventually learn to breath water. This is
  made up for by low maxed stats.
- Werewolf: Similar to humans, but with permanent, incurable lycanthropy.
  Can be considered a "challenge race."
- Infernal: Gain regeneration and have a strong set of abilities, but many
  monsters are hostile to them and they are vulnerable to silver.
- Angel: Gain flying and have no opposed races, but aggravate monsters and
  have subpar physical abilities. All demon lords will attack them instead
  of chatting.

New Roles
- Cartomancer: A spellcaster with a focus on spell cards (scrolls). They start
  with a number of scrolls, and whenever they use one it has a chance of not
  being consumed. Unfortunately, their skill selection is awful, and they
  receive a harsh alignment penalty for using magic markers (you feel guilty
  for forging a card). The entire role affectionately parodies various trading
  card games and the shows that center on them.