@@ -2,7 +2,7 @@
 /* Copyright (c) Stichting Mathematisch Centrum, Amsterdam, 1985. */
 /* NetHack may be freely redistributed.  See license for details. */
 
-/* Edited on 4/9/18 by NullCGT */
+/* Edited on 4/12/18 by NullCGT */
 
 #include "hack.h"
 
@@ -2028,6 +2028,8 @@ int type;
         return 60;
     case PM_GLASS_GOLEM:
         return 60;
+    case PM_SILVER_GOLEM:
+        return 100;
     case PM_SLUDGE_GOLEM:
         return 120;
     case PM_IRON_GOLEM:
