@@ -2,7 +2,7 @@
 /* Copyright (c) Stichting Mathematisch Centrum, Amsterdam, 1985. */
 /* NetHack may be freely redistributed.  See license for details. */
 
-/* Edited on 4/6/18 by NullCGT */
+/* Edited on 4/12/18 by NullCGT */
 
 /* If you're using precompiled headers, you don't want this either */
 #ifdef MICROPORT_BUG
@@ -367,6 +367,12 @@ unsigned corpseflags;
         corpstatflags |= CORPSTAT_INIT;
         obj = mkcorpstat(CORPSE, mtmp, &mons[num], x, y, corpstatflags);
         obj->age -= 100; /* this is an *OLD* corpse */
+        break;
+    case PM_SILVER_GOLEM:
+        num = d(2, 6);
+        while (num--)
+            obj = mksobj_at(SILVER_DAGGER, x, y, TRUE, FALSE);
+        free_mname(mtmp); /* don't christen obj */
         break;
     case PM_IRON_GOLEM:
         num = d(2, 6);
