@@ -2,6 +2,8 @@
 /* Copyright (c) Stichting Mathematisch Centrum, Amsterdam, 1985. */
 /* NetHack may be freely redistributed.  See license for details. */
 
+/* Edited on 4/12/18 by NullCGT */
+
 #include "hack.h"
 
 extern const char *const destroy_strings[][3]; /* from zap.c */
@@ -2486,6 +2488,7 @@ register struct monst *mtmp;
             case PM_PURPLE_WORM:
             case PM_JABBERWOCK:
             case PM_IRON_GOLEM:
+            case PM_SILVER_GOLEM:
             case PM_BALROG:
             case PM_KRAKEN:
             case PM_MASTODON:
