@@ -2,7 +2,7 @@
 /* Copyright (c) Stichting Mathematisch Centrum, Amsterdam, 1985. */
 /* NetHack may be freely redistributed.  See license for details. */
 
-/* Edited on 4/10/18 by NullCGT */
+/* Edited on 4/12/18 by NullCGT */
 
 #include "hack.h"
 
@@ -699,6 +699,9 @@ int dieroll;
             if (uright && objects[uright->otyp].oc_material == SILVER)
                 barehand_silver_rings++;
             if (barehand_silver_rings && mon_hates_silver(mon)) {
+                tmp += rnd(20);
+                silvermsg = TRUE;
+            } else if (is_silver(youmonst.data)) {
                 tmp += rnd(20);
                 silvermsg = TRUE;
             }
